--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "pnpm run build",
-    "deploy" : "gh-pages -d build"
-
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
